samples/_failures_safe/1761717382_596e61_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_43e371a7.c: In function ‘main’:
./samples/SAFE/__tmp_43e371a7.c:144:9: error: expected declaration or statement at end of input
  144 |         printf("3. Transpose matrix A\n");
      |         ^~~~~~
./samples/SAFE/__tmp_43e371a7.c:144:9: error: expected declaration or statement at end of input
